[project]
name = "robuststochasticcontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "AdrianGuel",email = "adrianjguelc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
